修复开启串号管理在收银台中不显示串号问题
175行的读取系统属性值读错了，读的批次管理，应该是enable_serial

Signed-off-by: Dengyuan Yao <shadowsyuan@users.noreply.github.com>

--- a/application/index/view/cashier/main.html
+++ b/application/index/view/cashier/main.html
@@ -172,7 +172,7 @@
     {notempty name='sys.cashier_customer'}plug_val.nod_customer={php}echo get_selectpage('customer',$sys['cashier_customer']);{/php};{/notempty}
     {notempty name='sys.cashier_account'}plug_val.nod_account={php}echo get_selectpage('account',$sys['cashier_account']);{/php};{/notempty}
     {empty name='sys.enable_batch'} $('input[nod="batch"]').parent().parent().hide();{/empty}
-    {empty name='sys.enable_batch'} $('#set_serial').parent().parent().hide();{/empty}
+    {empty name='sys.enable_serial'} $('#set_serial').parent().parent().hide();{/empty}
 </script>
 <script src="/skin/js/public/selectpage.js" type="text/javascript" charset="utf-8"></script>
 <script src="/skin/js/public/select2.js" type="text/javascript" charset="utf-8"></script>
